Update project to eclipse 2023-06 and Java 17 as min JDK All but javamoney and some parts of odftoolkit working